# quantum-proof-of-execution

./: .dockerignore  .gitignore  DISCLAIMER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
cirq_impl/: workload.py
contracts/: ProofRecord.sol  README.md
docs/: non_claims.md  portability_notes.md  threat_model.md
qiskit_impl/: workload.py
quantum_proof_of_execution/: __init__.py
records/: sample_record.json
scripts/: compile_contracts.ps1  hash_record.py  make_record.py  run_cirq.py  run_qiskit.py  verify_record.py
