[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-proof-of-execution"
version = "0.1.0"
description = "Experimental reference implementation for recording, verifying, and attesting to quantum execution across frameworks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "qiskit",
  "qiskit-aer",
  "cirq",
  "cryptography",
  "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["quantum_proof_of_execution"]
